--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,29 @@
+<h1>Show a Post</h1>
 
+<h2>Post Title: <%= link_to @post.title, post_path(@post) %></h2><br>
+<h3>Post Content: <%= @post.content %></h3><br>
+<h4>Categories: </h4>
+<% @post.categories.each do |post_category| %>
+    <%= post_category.name %>
+<% end %>
+<h4>Comments: </h4>
+<% @post.comments.each do |comment| %>
+    <%= comment.user.username %> says: <%= comment.content %>
+<% end %>
+<h4>Unique Commenters: </h4>
+<% @post.users.uniq.each do |user| %>
+    <%= link_to user.username, user_path(user) %>
+<% end %>
+
+<%= form_for@post.comments.build do |f| %>
+    <%= f.hidden_field :post_id %>
+    <%= f.collection_select :user_id, User.all, :id, :username %><br>
+    <%= f.fields_for :user, User.new do |user_fields| %>
+        <%= user_fields.label :username, "Username:" %>
+        <%= user_fields.text_field :username %><br>
+    <% end %>
+    <%= f.label :content, "Add a comment:" %>
+    <%= f.text_area :content%>
+    <br>
+    <%= f.submit %>
+<% end %>
