--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,5 @@
+<h1>View a User</h1>
 
+<%= @user.posts.each do |user_post| %>c
+    <%= link_to user_post.title, post_path(user_post) %>
+<% end %>
