--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -17,6 +17,7 @@
 
 <%= form_for@post.comments.build do |f| %>
     <%= f.hidden_field :post_id %>
+    <%= f.label :user %>
     <%= f.collection_select :user_id, User.all, :id, :username %><br>
     <%= f.fields_for :user, User.new do |user_fields| %>
         <%= user_fields.label :username, "Username:" %>
