--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,17 +8,17 @@
 <% end %>
 <h4>Comments: </h4>
 <% @post.comments.each do |comment| %>
-    <%= comment.user.username %> says: <%= comment.content %>
+    <%= comment.user.username %> says: <%= comment.content %>.<br>
 <% end %>
 <h4>Unique Commenters: </h4>
 <% @post.users.uniq.each do |user| %>
-    <%= link_to user.username, user_path(user) %>
+    <%= link_to user.username, user_path(user) %><br>
 <% end %>
 
 <%= form_for@post.comments.build do |f| %>
     <%= f.hidden_field :post_id %>
     <%= f.label :user %>
-    <%= f.collection_select :user_id, User.all, :id, :username %><br>
+    <%= f.collection_select :user_id, User.all, :id, :username, {:include_blank=>"User Name:"} %><br>
     <%= f.fields_for :user, User.new do |user_fields| %>
         <%= user_fields.label :username, "Username:" %>
         <%= user_fields.text_field :username %><br>
